# network-driver

./: .clang-format  CMakeLists.txt  CMakePresets.json  Dockerfile  Jenkinsfile  README.md  config.cfg  configure  main.cpp  output.txt
.devcontainer/: devcontainer.json
certs/: server.key
cmake/: FindIoUring.cmake
documentation/: class-diagram.uxf
evaluation/: evaluate.py
evaluation/output/: count_mirror_single.csv  count_no_mirror_single.csv
header/: fwd.hpp
header/benchmark/: driver.hpp  result.hpp  socket_manager_impl.hpp  tcp_stream_client.hpp  tcp_stream_writer.hpp
header/detail/: byte_container.hpp  error.hpp  error_code.hpp  socket_guard.hpp
header/meta/: type_traits.hpp
header/net/: acceptor.hpp  application.hpp  datagram_socket.hpp  datagram_transport.hpp  epoll_multiplexer.hpp  error.hpp  error_code.hpp  event_result.hpp  fwd.hpp  layer.hpp  layer_adaptor.hpp  mac_address.hpp  multiplexer.hpp  multithreaded_epoll_multiplexer.hpp  operation.hpp  pipe_socket.hpp  pollset_updater.hpp  raw_socket.hpp  receive_policy.hpp  socket.hpp  socket_guard.hpp  socket_id.hpp  socket_manager.hpp  socket_manager_factory.hpp  socket_manager_impl.hpp  socket_sys_includes.hpp  stream_manager.hpp  stream_socket.hpp  stream_transport.hpp  tcp_accept_socket.hpp  tcp_stream_socket.hpp  timeout_entry.hpp  tls.hpp  transport.hpp  transport_adaptor.hpp  transport_extension.hpp  udp_datagram_socket.hpp  uring_multiplexer.hpp
header/net/application/: mirror.hpp  tls.hpp  tls_example.cpp
header/net/ip/: fwd.hpp  v4_address.hpp  v4_endpoint.hpp
header/net/manager/: stream.hpp
header/net/transport_extension/: tls.hpp
header/openssl/: client_session.hpp  server_session.hpp  ssl_status.hpp  tls.hpp  tls_context.hpp  tls_session.hpp
header/openssl/examples/: common.hpp  ssl_client.cpp  ssl_server.cpp
header/packet/: dns.hpp  ethernet.hpp  packet.hpp  payload.hpp
header/util/: binary_deserializer.hpp  binary_serializer.hpp  byte_span.hpp  error.hpp  error_code.hpp  error_or.hpp  format.hpp  fwd.hpp  scope_guard.hpp  serialized_size.hpp
libnet/meta/: concepts.hpp  type_traits.hpp
libnet/net/: acceptor.hpp  application.hpp  datagram_socket.hpp  datagram_transport.hpp  datagram_uring_manager.hpp  event_result.hpp  fwd.hpp  kqueue_multiplexer.hpp  layer.hpp  layer_adaptor.hpp  mac_address.hpp  manager.hpp  manager_base.hpp  manager_factory.hpp  manager_result.hpp  multiplexer.hpp  multiplexer_base.hpp  multiplexer_impl.hpp  operation.hpp  pipe_socket.hpp  pollset_updater.hpp  receive_policy.hpp  socket.hpp  socket_guard.hpp  socket_id.hpp  socket_manager.hpp  socket_manager_factory.hpp  stream_socket.hpp  stream_transport.hpp  stream_uring_acceptor.hpp  stream_uring_manager.hpp  tcp_accept_socket.hpp  tcp_stream_socket.hpp  timeout_entry.hpp  tls.hpp  transport.hpp  transport_adaptor.hpp  udp_datagram_socket.hpp  uri.hpp  uring_manager.hpp  (+2 more)
libnet/net/detail/: acceptor.hpp  datagram_dispatcher.hpp  datagram_endpoint_wrapper.hpp  datagram_transport.hpp  datagram_transport_test.hpp  epoll_multiplexer.hpp  event_handler.hpp  kqueue_multiplexer.hpp  layer_base.hpp  manager_base.hpp  multiplexer_base.hpp  pollset_updater.hpp  stream_transport.hpp  transport_adaptor.hpp  transport_base.hpp  uring_manager.hpp  uring_multiplexer.hpp
libnet/net/epoll/: multiplexer.hpp
libnet/net/ip/: fwd.hpp  v4_address.hpp  v4_endpoint.hpp
libnet/net/kqueue/: manager.hpp  multiplexer.hpp
libnet/net/socket/: datagram_socket.hpp  pipe_socket.hpp  socket.hpp  socket_id.hpp  stream_socket.hpp  tcp_accept_socket.hpp  tcp_stream_socket.hpp  udp_datagram_socket.hpp
libnet/net/sockets/: datagram_socket.hpp  pipe_socket.hpp  socket.hpp  socket_guard.hpp  socket_id.hpp  stream_socket.hpp  tcp_accept_socket.hpp  (+2 more)
libnet/openssl/: tls_context.hpp  tls_session.hpp
libnet/packet/: dns.hpp  ethernet.hpp  ip.hpp  packet.hpp  payload.hpp  udp.hpp
libnet/util/: assert.hpp  binary_deserializer.hpp  binary_serializer.hpp  byte_array.hpp  byte_buffer.hpp  byte_literals.hpp  byte_span.hpp  cli_parser.hpp  config.hpp  error.hpp  error_code.hpp  error_or.hpp  exception.hpp  format.hpp  fwd.hpp  intrusive_ptr.hpp  logger.hpp  ref_counted.hpp  scope_guard.hpp  serialized_size.hpp  tokenizer.hpp
scripts/: headings.py
src/: ethernet.cpp  main.cpp  payload.cpp  pipe_socket.cpp  playground.cpp  raw_socket.cpp  socket_manager.cpp
src/benchmark/: driver.cpp  socket_manager_impl.cpp  tcp_stream_client.cpp  tcp_stream_writer.cpp
src/detail/: error_code.cpp
src/net/: acceptor.cpp  datagram_socket.cpp  epoll_multiplexer.cpp  error.cpp  error_code.cpp  event_result.cpp  kqueue_multiplexer.cpp  manager.cpp  manager_base.cpp  multiplexer.cpp  multiplexer_base.cpp  multiplexer_impl.cpp  multithreaded_epoll_multiplexer.cpp  operation.cpp  pipe_socket.cpp  pollset_updater.cpp  raw_socket.cpp  socket.cpp  socket_manager.cpp  socket_manager_impl.cpp  stream_socket.cpp  tcp_accept_socket.cpp  tcp_stream_socket.cpp  udp_datagram_socket.cpp  uri.cpp  uring_multiplexer.cpp
src/openssl/: ssl_status.cpp  tls_context.cpp  tls_session.cpp
src/packet/: packet.cpp  payload.cpp
src/util/: binary_deserializer.cpp  binary_serializer.cpp  cli_parser.cpp  config.cpp  error.cpp  error_code.cpp  format.cpp
test/: acceptor.cpp  multiplexer_mock.hpp  net_test.cpp  net_test.hpp  net_test_macros.hpp  net_test_main.cpp  tcp_stream_socket.cpp
test/detail/: socket_guard.cpp
test/net/: acceptor.cpp  datagram_socket.cpp  datagram_transport.cpp  epoll_multiplexer.cpp  kqueue_multiplexer.cpp  manager_base.cpp  multiplexer.cpp  multiplexer_impl.cpp  multithreaded_epoll_multiplexer.cpp  pollset_updater.cpp  socket_guard.cpp  socket_manager.cpp  stream_manager.cpp  stream_transport.cpp  tcp_socket.cpp  tls.cpp  transport_adaptor.cpp  udp_datagram_socket.cpp  uri.cpp  uring_multiplexer.cpp
test/openssl/: communication.cpp
test/util/: assert.cpp  binary_deserializer.cpp  binary_serializer.cpp  cli_parser.cpp  config.cpp  format.cpp  intrusive_ptr.cpp  logger.cpp  ref_counted.cpp  scope_guard.cpp  serialized_size.cpp  tokenizer.cpp
(+49 files in other folders)
